add property for ortho, while uses old plugin
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathWebSvcCommon/trunk@61129 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/WSFPlugin/config/blast-config.xml.tmpl
+++ b/WSFPlugin/config/blast-config.xml.tmpl
@@ -11,6 +11,9 @@
   <!--entry key="BlastPath">/opt/WU_BLAST/</entry-->
   <entry key="BlastPath">${blastPath}</entry>
 
+<!-- for Ortho while using old blast plugin -->
+  <entry key="AppPath">${blastPath}</entry>
+
   <!-- Optional, the temporary path for BLAST to make input files
     and save output files. This entry is optional, and "/tmp/blast" as
     default, if not specified. -->
