do not use default id regex since it is different in ortho
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathWebSvcCommon/trunk@61235 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/WSFPlugin/config/blast-config.xml.tmpl
+++ b/WSFPlugin/config/blast-config.xml.tmpl
@@ -43,6 +43,7 @@
     
   <entry key="IdentifierRegex"><![CDATA[^>*(?:[^\|]*\|)?(\S+)]]></entry>
  -->
+     <entry key="IdentifierRegex">${idBlastRegex}</entry>
 
   <!-- Optional, the regular expression used to match the organism in the
     defline. The organism can be included in a group, and group index can be
